--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.6
+  screenshot: ^1.2.3
+  image_gallery_saver: "^1.7.1"
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
